Fix problem with badly-working svg icon in admonition on Safari, remove letter-spacing from headings

--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -78,13 +78,12 @@ h3,
 h4,
 h5 {
   font-weight: 600;
-  letter-spacing: 0.02em;
+  letter-spacing: 0;
 }
 
 h6 {
   font-family: var(--swm-code-font);
   font-weight: 500;
-  letter-spacing: 0.02em;
 }
 
 ul[role="tablist"] {
